--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/file": "^4.5.2",
     "@ionic-native/file-path": "^4.5.2",
+    "@ionic-native/image-picker": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
