--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "JogoDaMemoria",
+  "name": "Jogo Da Memória",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Raphael Vizoni do Prado",
+  "homepage": "https://github.com/Vizoni/JogoDaMemoria",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -39,5 +39,5 @@
     "@ionic/app-scripts": "3.1.5",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "Built with Ionic 3."
 }
